fix avatar overflow

--- a/src/blocks/html/body/application/container/content/profile-card/profile-head/avatar/avatar.scss
+++ b/src/blocks/html/body/application/container/content/profile-card/profile-head/avatar/avatar.scss
@@ -3,6 +3,6 @@
     border-radius: 200px;
     width: 20vh;
     height: 20vh;
-    // background-image: url('../img/pers1.svg');
     background-size: 100%;
+    overflow: hidden;
 }
